# TensorFaux

./: .gitignore  Gemfile  JEKYLL_README.md  README.md  _config.yaml  index.md  main.py  nn.py  optimizers.py  pyproject.toml
pages/: about.md  demo.html  demo.md  docs.md
src/: MNIST.ipynb  cnn_debug.py  main.py  mnist.py  moons.ipynb  reshape_test.py  softmax_debugging.py  tensorfaux-0.0.1-py3-none-any.whl
src/tensorfaux/: layers.py  models.py  util.py
